further css bug fixes on mobile  settings

--- a/admin/partials/settings/css/qinvoice-settings.css
+++ b/admin/partials/settings/css/qinvoice-settings.css
@@ -82,7 +82,7 @@
     font-size: 14px;
     width: 118px;
     font-weight: bold;
-    padding: 0 0 12px 0;
+    padding: 0 0 17px 0;
 }
 
 
@@ -228,6 +228,7 @@ section.invoiceSettings input[id^="tax"] {
 
 .q-invoice-page section.invoiceSettings input#password {
     width: 144px;
+    border: 1px solid #dadce1;
 }
 
 .q-invoice-page section.invoiceSettings input#port {
@@ -260,7 +261,7 @@ section.invoiceSettings input[id^="tax"] {
     vertical-align: middle;
 }
 
-div#popupLogoImage {
+.q-invoice-page div#popupLogoImage {
     background-color: white;
     position: absolute;
     top:300px;
@@ -272,13 +273,13 @@ div#popupLogoImage {
     border:1px solid #3c434a;
 }
 
-div#popupLogoImage img {
+.q-invoice-page div#popupLogoImage img {
         padding: 40px;
         max-height: 400px;
 }
 
 
-div#showLogoDiv { 
+.q-invoice-page div#showLogoDiv { 
     margin-top: -1px;
     font-family: sans-serif;
     font-size: 14px;
@@ -291,34 +292,34 @@ div#showLogoDiv {
     text-align: center;
 }
 
-#qinv_settings_delete_logo{
+.q-invoice-page #qinv_settings_delete_logo{
     color: #343a40;
     cursor: pointer;
     font-size: 20px;
     right: 0;
 }
-#qinv_settings_delete_logo::before{
+.q-invoice-page #qinv_settings_delete_logo::before{
     top: 0;
 }
 
-.qinv_settings_logo_tbBuffer{
+.q-invoice-page .qinv_settings_logo_tbBuffer{
     height: 20px;
     width:100%;
     text-align: right;
 }
 
-span.dashicons-format-image {
+.q-invoice-page span.dashicons-format-image {
     vertical-align: middle;
     color: rgb(34, 113, 177);
 }
 
-#qi_contactFormHeightMod {
+.q-invoice-page #qi_contactFormHeightMod {
     height:500px;
 }
 
 @media only screen and (max-width:1275px){
 
-    #qi_contactFormHeightMod,
+    .q-invoice-page #qi_contactFormHeightMod,
     .q-invoice-page .containerFirst,
     .q-invoice-page .containerSecond {
         height: auto;
@@ -342,13 +343,44 @@ span.dashicons-format-image {
     .q-invoice-page section.invoiceSettings input[type=text],
     .q-invoice-page section.invoiceSettings input[type=email] {
         width: 50%;
+        float: right;
+    }
+
+    .q-invoice-page section.invoiceSettings input#ZIP,
+    .q-invoice-page div#showLogoDiv,
+    .q-invoice-page section.invoiceSettings input#noStart,
+    .q-invoice-page section.invoiceSettings select,
+    .q-invoice-page section.invoiceSettings input[type="number"],
+    .q-invoice-page section.invoiceSettings input#phone,
+    .q-invoice-page section.invoiceSettings input#password{
+        float: right;
     }
     
 }
 
 @media only screen and (max-width:782px){
 
-    #qi_contactFormHeightMod,
+    .q-invoice-page section.invoiceSettings input#ZIP,
+    .q-invoice-page div#showLogoDiv,
+    .q-invoice-page section.invoiceSettings input#noStart,
+    .q-invoice-page section.invoiceSettings select,
+    .q-invoice-page section.invoiceSettings input[type="number"],
+    .q-invoice-page section.invoiceSettings input#phone,
+    .q-invoice-page section.invoiceSettings input#password{
+        float: left;
+        margin-left: 0;
+        margin-bottom: 15px;
+    }
+
+    .q-invoice-page section.invoiceSettings input[type=text],
+    .q-invoice-page section.invoiceSettings input[type=email]{
+        float: left;
+        margin-left: 0;
+        margin-bottom: 20px;
+        width: 100%
+    }
+
+    .q-invoice-page #qi_contactFormHeightMod,
     .q-invoice-page .containerFirst,
     .q-invoice-page .containerSecond {
         height: auto;
@@ -374,8 +406,12 @@ span.dashicons-format-image {
         padding-left: 0;
     }
 
-    .q-invoice-page .invoiceSettings{
-        padding-left: 15px;
+    .q-invoice-page .text_details_input_mod textarea{
+        min-height: 64px;
+    }
+
+    .q-invoice-page section.invoiceSettings th{
+        width: 100%;
     }
     
 }
@@ -394,6 +430,14 @@ span.dashicons-format-image {
     .q-invoice-page section.invoiceSettings input[type="text"],
     .q-invoice-page section.invoiceSettings input[type="email"]{
         width: 90%;
+    }
+
+    .q-invoice-page #settingsFormWrapper{
+        overflow-y: scroll;
+    }
+
+    .q-invoice-page form#qinvoiceSettings{
+        min-width: 200px;
     }
     
 }
